update exception handling notebool

--- a/02_python/noteboooks/02_exception_handling_OOPs.ipynb
+++ b/02_python/noteboooks/02_exception_handling_OOPs.ipynb
@@ -862,6 +862,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31475558",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 5. Exception Hierarchy\n",
+    "\n",
+    "### Understanding Python's Exception Hierarchy\n",
+    "\n",
+    "Python exceptions are organized in a hierarchy. Understanding this helps you catch exceptions at the right level.\n",
+    "\n",
+    "```\n",
+    "BaseException\n",
+    "├── SystemExit\n",
+    "├── KeyboardInterrupt\n",
+    "├── GeneratorExit\n",
+    "└── Exception\n",
+    "    ├── StopIteration\n",
+    "    ├── ArithmeticError\n",
+    "    │   ├── FloatingPointError\n",
+    "    │   ├── OverflowError\n",
+    "    │   └── ZeroDivisionError\n",
+    "    ├── AssertionError\n",
+    "    ├── AttributeError\n",
+    "    ├── BufferError\n",
+    "    ├── EOFError\n",
+    "    ├── ImportError\n",
+    "    │   └── ModuleNotFoundError\n",
+    "    ├── LookupError\n",
+    "    │   ├── IndexError\n",
+    "    │   └── KeyError\n",
+    "    ├── MemoryError\n",
+    "    ├── NameError\n",
+    "    │   └── UnboundLocalError\n",
+    "    ├── OSError\n",
+    "    │   ├── FileNotFoundError\n",
+    "    │   ├── PermissionError\n",
+    "    │   └── TimeoutError\n",
+    "    ├── RuntimeError\n",
+    "    │   ├── NotImplementedError\n",
+    "    │   └── RecursionError\n",
+    "    ├── TypeError\n",
+    "    ├── ValueError\n",
+    "    │   └── UnicodeError\n",
+    "    └── Warning\n",
+    "        ├── DeprecationWarning\n",
+    "        ├── UserWarning\n",
+    "        └── FutureWarning\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "caf5a17d",
