update exception handling notebool

--- a/02_python/noteboooks/02_exception_handling_OOPs.ipynb
+++ b/02_python/noteboooks/02_exception_handling_OOPs.ipynb
@@ -914,12 +914,258 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4da76133",
+   "metadata": {},
+   "source": [
+    "# Exception Handling\n",
+    "Custom exceptions are often created by inheriting from Python's built-in `Exception` class.\n",
+    "\n",
+    "### WHAT ARE CUSTOM EXCEPTIONS?\n",
+    "\n",
+    "Custom exceptions are your own error types that you create to handle specific \n",
+    "problems in your code. Think of them as custom error messages that are more \n",
+    "meaningful than generic Python errors.\n",
+    "\n",
+    "### WHY USE CUSTOM EXCEPTIONS?\n",
+    "\n",
+    "1. More descriptive error messages\n",
+    "2. Better code organization\n",
+    "3. Specific error handling for different problems\n",
+    "4. Professional code structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "6a554687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AgeValidationError(Exception):\n",
+    "    pass\n",
+    "\n",
+    "class TooYoungError(AgeValidationError):\n",
+    "    \"\"\"Raised when age is below the minimum requirement\"\"\"\n",
+    "    pass\n",
+    "\n",
+    "class TooOldError(AgeValidationError):\n",
+    "    \"\"\"Raised when age is above the maximum requirement\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TooYoungError",
+     "evalue": "Age 9 is too young. Minimum age is 20.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTooYoungError\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[136]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m age = \u001b[32m9\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m age < \u001b[32m20\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m TooYoungError(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAge \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mage\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m is too young. Minimum age is 20.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m age > \u001b[32m30\u001b[39m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "\u001b[31mTooYoungError\u001b[39m: Age 9 is too young. Minimum age is 20."
+     ]
+    }
+   ],
+   "source": [
+    "age = 9\n",
+    "if age < 20:\n",
+    "    raise TooYoungError(f\"Age {age} is too young. Minimum age is 20.\")\n",
+    "elif age > 30:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "50620b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== CUSTOM EXCEPTIONS ===\n",
+      "=== BASIC EXAM ELIGIBILITY CHECKER ===\n",
+      "Your calculated age: 25\n",
+      "✓ Age 25 is valid! You can apply for the exam.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def check_exam_eligibility():\n",
+    "    print(\"=== BASIC EXAM ELIGIBILITY CHECKER ===\")\n",
+    "    \n",
+    "    try:\n",
+    "        year = int(input(\"Enter your birth year: \"))\n",
+    "        age = 2025 - year\n",
+    "        \n",
+    "        print(f\"Your calculated age: {age}\")\n",
+    "        \n",
+    "        if age < 20:\n",
+    "            raise TooYoungError(f\"Age {age} is too young. Minimum age is 20.\")\n",
+    "        elif age > 30:\n",
+    "            raise TooOldError(f\"Age {age} is too old. Maximum age is 30.\")\n",
+    "        else:\n",
+    "            # Age is between 20-30 (inclusive)\n",
+    "            print(f\"✓ Age {age} is valid! You can apply for the exam.\")\n",
+    "            \n",
+    "    except TooYoungError as e:\n",
+    "        print(f\"❌ Sorry: {e}\")\n",
+    "    except TooOldError as e:\n",
+    "        print(f\"❌ Sorry: {e}\")\n",
+    "    except ValueError:\n",
+    "        print(\"❌ Please enter a valid year (numbers only)\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(\"=== CUSTOM EXCEPTIONS ===\")\n",
+    "    check_exam_eligibility()\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "caf5a17d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    # class variables\n",
+    "    var = 90\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def multiply(self):\n",
+    "        print(var)\n",
+    "        return self.x * self.y\n",
+    "\n",
+    "\n",
+    "p1= Point(10, 5)\n",
+    "p2 = Point(10, 8)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "1a21cce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p2.x)\n",
+    "print(p2.y)\n",
+    "\n",
+    "print(p2.multiply())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e49e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "7f9f0022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1.y = 12\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "4171b165",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "856b0ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Point.__init__() takes 3 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[125]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m p3 = \u001b[43mPoint\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: Point.__init__() takes 3 positional arguments but 4 were given"
+     ]
+    }
+   ],
+   "source": [
+    "p3 = Point(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e8bc144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Shape:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
