add notes, python exception handling amd intro to oops

--- a/02_python/noteboooks/02_exception_handling_OOPs.ipynb
+++ b/02_python/noteboooks/02_exception_handling_OOPs.ipynb
@@ -1035,6 +1035,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37d8e9af",
+   "metadata": {},
+   "source": [
+    "WHY DO WE NEED TO 'RAISE' BEFORE 'EXCEPT'?\n",
+    "\n",
+    "Think of exceptions like fire alarms:\n",
+    "\n",
+    "1. RAISE = Someone pulls the fire alarm (creates an emergency situation)\n",
+    "2. EXCEPT = The fire department responds to the alarm (handles the emergency)\n",
+    "\n",
+    "You can't respond to a fire alarm that was never pulled!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbba8914",
+   "metadata": {},
+   "source": [
+    "![](../../assets/images/custom_exceptions.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae6e01d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_exception_hierarchy(exception_class, indent=0):\n",
+    "    \"\"\"Recursively display exception hierarchy\"\"\"\n",
+    "    print(\"  \" * indent + exception_class.__name__)\n",
+    "    for subclass in exception_class.__subclasses__():\n",
+    "        show_exception_hierarchy(subclass, indent + 1)\n",
+    "\n",
+    "# Show the hierarchy\n",
+    "print(\"Exception Hierarchy from Exception base class:\")\n",
+    "show_exception_hierarchy(Exception)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "caf5a17d",
@@ -1055,6 +1110,42 @@
     "p1= Point(10, 5)\n",
     "p2 = Point(10, 8)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "905ccdf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finally was excecuted\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def validate_age(age):\n",
+    "    try:\n",
+    "        int_age = int(age)\n",
+    "        return int_age\n",
+    "    except:\n",
+    "        int_age = None\n",
+    "    finally:\n",
+    "        print(\"finally was excecuted\")\n",
+    "validate_age(8)"
    ]
   },
   {
