add notes, python OOP advanced, file handling

--- a/02_python/noteboooks/03_python_OOP.ipynb
+++ b/02_python/noteboooks/03_python_OOP.ipynb
@@ -512,14 +512,46 @@
     "class MathUtils:\n",
     "    @staticmethod\n",
     "    def add(x, y):\n",
-    "        return x + y\n",
-    "        \n",
+    "        return x + y  \n",
+    "\n",
+    "    @staticmethod\n",
     "    def is_even(n):\n",
     "        return n % 2 == 0\n",
     "    \n",
     "print(MathUtils.add(3, 5))      # 8\n",
     "print(MathUtils.is_even(4))     # True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d9248f40",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "MathUtils.is_even() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m mu = MathUtils()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mmu\u001b[49m\u001b[43m.\u001b[49m\u001b[43mis_even\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: MathUtils.is_even() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "mu = MathUtils()\n",
+    "mu.is_even(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea867943",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
