add json, random module intro notebook

--- a/02_python/noteboooks/06_python_method_overriding.ipynb
+++ b/02_python/noteboooks/06_python_method_overriding.ipynb
@@ -757,6 +757,56 @@
    "id": "b2185238",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# TASKS: \n",
+    "# 1. Custom List / container\n",
+    "# 2. Getters and setters in Python @property\n",
+    "# 3. Payment Gateway # Abstraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd914d74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This goes to standard output\n",
+      "Enter your name: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "This is an error message\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# Writing to stdout\n",
+    "sys.stdout.write(\"This goes to standard output\\n\")\n",
+    "\n",
+    "# Writing to stderr\n",
+    "sys.stderr.write(\"This is an error message\\n\")\n",
+    "\n",
+    "# Reading from stdin\n",
+    "print(\"Enter your name: \")\n",
+    "name = sys.stdin.readline().strip()\n",
+    "print(f\"Hello, {name}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b88bb9df",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
