--- a/02_python/noteboooks/07_python_file_handling.ipynb
+++ b/02_python/noteboooks/07_python_file_handling.ipynb
@@ -353,8 +353,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6f9449ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob\n",
+    "\n",
+    "# Get absolute paths\n",
+    "abs_paths = [os.path.abspath(f) for f in glob.glob('*.jpg')]\n",
+    "\n",
+    "# Combine with directory paths\n",
+    "pattern = os.path.join('data', '*.csv')\n",
+    "csv_files = glob.glob(pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f68ae27f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c:\\\\dev01\\\\04_python_api_dev\\\\02_python\\\\noteboooks\\\\Anne_H.jpg']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35732b1d",
    "metadata": {},
    "outputs": [],
    "source": []
